--- a/css/snake.css
+++ b/css/snake.css
@@ -135,36 +135,65 @@ h1 {
   /*border-image: url('../images/chalkboard-green.jpg') 10 10 stretch;*/
   /*border-radius: 5px;
   background: url('../images/chalkboard-green.jpg');*/
-  padding: 20px;
+  padding: 10px 10px 0 10px;
 }
 
-.left {
+/*.left {
   float: left;
   width: 280px;
   border: 10px solid #A36F57;
-  /*border-image: url('../images/chalkboard-green.jpg') 10 10 stretch;*/
   border-radius: 5px;
   background: url('../images/chalkboard-green.jpg');
-}
+}*/
 
-.right {
+/*.right {
   float: left;
   width: 420px;
-}
+}*/
 .main {
   margin: 0 auto;
-  width: 720px;
-}
-
-.high-scores {
-  display: none;
+  width: 420px;
 }
 
 .pause-screen {
+  font-size: 18px;
+  margin: 130px 30px 0;
+  width: 300px;
+  position: absolute;
   padding: 20px;
   text-shadow: 1px 1px 1px #000, 2px 2px 3px #000;
-  /*border: 10px solid #A36F57;*/
-  /*border-image: url('../images/chalkboard-green.jpg') 10 10 stretch;*/
-  /*border-radius: 5px;
-  background: url('../images/chalkboard-green.jpg');*/
+  border: 10px solid #A36F57;
+  background: url('../images/chalkboard-black.jpg');
+  border-radius: 5px;
+  opacity: 1;
+}
+
+.start-screen {
+  font-size: 18px;
+  margin: 130px 28px 0;
+  width: 305px;
+  position: absolute;
+  padding: 20px;
+  text-shadow: 1px 1px 1px #000, 2px 2px 3px #000;
+  border: 10px solid #A36F57;
+  background: url('../images/chalkboard-black.jpg');
+  border-radius: 5px;
+  opacity: 1;
+}
+
+.restart-screen {
+  font-size: 18px;
+  margin: 130px 30px 0;
+  width: 300px;
+  position: absolute;
+  padding: 20px;
+  text-shadow: 1px 1px 1px #000, 2px 2px 3px #000;
+  border: 10px solid #A36F57;
+  background: url('../images/chalkboard-black.jpg');
+  border-radius: 5px;
+  opacity: 1;
+}
+
+.hidden {
+  display:none;
 }
